<resources>
    <string name="app_name">GoLogin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">@string/app_name</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirm_password">Passwords must match</string>
    <string name="no_connection">No connection</string>
    <string name="please_connect_to_the_network">Please connect to the network</string>
    <string name="error">Error</string>
</resources>