<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <ImageView
            android:transitionName="logo"
            android:id="@+id/imageView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/gologin_full_logo" />

        <TextView
            android:id="@+id/textView_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_logo"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_logo"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_vertical_margin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            style="@style/customTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            style="@style/customTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_email"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            android:visibility="gone"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_email"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:cornerRadius="8dp"
            app:rippleColor="@color/teal_200" />

        <TextView
            android:id="@+id/textView_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:layout_alignParentLeft="true"
            android:text="@string/create_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:layout_alignParentRight="true"
            android:text="@string/forgot_password"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>